# Webots-SummitXL

./: README.md
scripts/: cartographer-explore.sh  environmental-install.sh  gmapping-explore.sh  ros2+webots-install.sh
workspace/explore/explore_lite/config/: params.yaml
workspace/explore/explore_lite/launch/: explore.launch.py
workspace/explore/explore_lite/src/: costmap_client.cpp  explore.cpp  frontier_search.cpp
workspace/localization/kalman_filter_localization/: CMakeLists.txt
workspace/localization/kalman_filter_localization/launch/: ekf.launch.py
workspace/localization/kalman_filter_localization/param/: ekf.yaml
workspace/localization/kalman_filter_localization/rviz/: ekfl.rviz
workspace/localization/kalman_filter_localization/src/: ekf_localization_component.cpp
workspace/localization/robot-pose-ekf-master/: CMakeLists.txt  package.xml
workspace/localization/robot-pose-ekf-master/config/: ekf_with_gps.yaml
workspace/localization/robot-pose-ekf-master/launch/: mobile_robot_ekf_v1.launch.py  sim.launch.py
workspace/localization/robot-pose-ekf-master/src/: gps_point_to_pose.cpp
workspace/map_2d/cartographer/: package.xml  setup.py
workspace/map_2d/cartographer/cartographer/: remapped.py
workspace/map_2d/cartographer/config/: carto_2d.lua
workspace/map_2d/cartographer/launch/: cartographer.launch.py  occupancy_grid.launch.py
workspace/map_2d/cartographer/rviz/: carto.rviz
workspace/map_3d/lio_sam/config/: params.yaml  (+1 more)
workspace/map_3d/octomap_server2/: deps.repos
workspace/navigation/: package.xml  setup.py
workspace/navigation/launch/: nav2.launch.py
workspace/navigation/param/: nav2.yaml
workspace/simulator/: package.xml  setup.py
workspace/simulator/launch/: robot.launch.py
workspace/simulator/resource/: my_robot.urdf
workspace/simulator/simulator/: keyboard.py  robot_driver.py
workspace/simulator/worlds/: .my_world.wbproj  my_world.wbt
(+9 files in other folders)
